manifest/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: person-app
  labels:
    name: person-app
